--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <button onclick="requestPermission()">Allow</button>
   </body>
 
-  
+  <script src = " index.js"></script>
 </body>
 </html>
   </body>
